3578 air attach with hotel scenario WIP
TODO list

- flesh out checkout controller updates with new request flow (hotel create trip events
while lob == Flights)

- flesh out trip bucket controller price change architecture with air attach pricing (perhaps
refactor the price change messaging to support air attach, w/ plane icon, etc..)

- fliesh out confirmation fragment logic when to show / not show the orange discount message
depending on the response (no reduced hotel rate available, sold out, etc...)

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -1482,6 +1482,8 @@
     <string name="air_attach_alert">Because you booked a flight</string>
     <!-- Air attach savings messaging -->
     <string name="air_attach_potential_savings">Save up to 55% on a hotel.</string>
+    <!-- Air attach discounted hotel messaging -->
+    <string name="air_attach_amount_discounted_TEMPLATE">You will save %s if you book your hotel now!</string>
     <!-- Air attach offer expiration alert -->
     <string name="air_attach_expires">Offer expires in</string>
     <!-- Air attach offer expiration date -->
